<resources>
    <string name="app_name">Mi Distrito</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_menu_principal">Mi Distrito</string>

    <string name="navigation_drawer_open">Abrir drawer</string>
    <string name="navigation_drawer_close">Cerrar drawer</string>
    <string name="title_activity_actividad_destacados">Destacados</string>
    <string name="title_activity_actividad_panoramas">Panoramas</string>
    <string name="title_activity_actividad_tc">Talleres y concursos</string>
    <string name="title_activity_actividad_mi_comuna">Mi Comuna</string>
    <string name="title_activity_actividad_evento">Evento</string>

    <!--Textos Evento DEMO-->
    <string name="actividad_evento_titulo">Ciclo de cine soviético</string>
    <string name="actividad_evento_descripcion">"Este martes tendremos una nueva jornada de cultura en DUOC UC Puente Alto, gracias al fino cine soviético"</string>
    <string name="actividad_evento_dia">Martes</string>
    <string name="actividad_evento_hora_inicio">13:37</string>
    <string name="actividad_evento_hora_fin">22:22</string>
    <string name="actividad_evento_precio">9999</string>
    <string name="actividad_evento_direccion">"DUOC UC: Puente Alto"</string>
    <string name="title_activity_fragmento_telefonos">FragmentoTelefonos</string>
</resources>
